--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "henchman-twitch"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "==3.13"
+requires-python = ">=3.13"
 dependencies = [
     "pydantic>=2.10.6",
     "python-dotenv>=1.0.1",
