--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asqlite",
     "pydantic>=2.10.6",
     "python-dotenv>=1.0.1",
     "twitchio>=2.10.0",
 ]
+
+[tool.uv.sources]
+asqlite = { git = "https://github.com/Rapptz/asqlite.git" }
